# what-a-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  settings.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-app-build-test.yml
crates/api/: Cargo.toml
crates/api/src/: errors.rs  lib.rs  routers.rs
crates/api/src/controllers/: greetings.rs  hello.rs
crates/api/src/endpoints/: hello.rs
crates/api/src/models/: mod.rs  requests.rs  responses.rs
crates/app/: Cargo.toml
crates/app/migrations/: 19700101000000_initial.sql
crates/app/src/: main.rs
crates/app/tests/: greetings_test.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  lib.rs
crates/domain/src/models/: greeting.rs
crates/domain/src/repositories/: greeting_repository.rs  mod.rs
crates/domain/src/services/: greeting_service.rs  mod.rs  service_registry.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: in_memory.rs  lib.rs  local.rs  mock.rs  real.rs
crates/settings/: Cargo.toml
crates/settings/src/: settings.rs
