[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
domain = { version = "0.1.0", path = "../domain" }
serde = { version = "1.0.204", features = ["derive"] }
anyhow = "1.0.86"
log = "0.4.22"
tokio = { version = "1.38.1", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
serde_json = "1.0.120"
validator = { version = "0.18.1", features = ["derive"] }
axum-valid = "0.19.0"
