[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
api = { version = "0.1.0", path = "../api" }
domain = { version = "0.1.0", path = "../domain" }
tokio = { version = "1.38.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing = "0.1.40"
clap = { version = "4.5.9", features = ["cargo"] }
serde = { version = "1.0.204", features = ["derive"] }
settings = { version = "0.1.0", path = "../settings" }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
axum = "0.7.5"

[dev-dependencies]
http-body-util = "0.1.2"
mime = "0.3.17"
serde_json = "1.0.120"
testcontainers = "0.20.1"
testcontainers-modules = { version = "0.8.0", features = ["postgres"] }
tokio = { version = "1.38.1", features = ["test-util"] }
tower = "0.4.13"
